Home page ready

--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@
 
 /* //navbar  */
 header{
-    z-index: 99;
+    z-index: 999;
     position: absolute;
     top: 0;
     left: 0;
@@ -56,7 +56,7 @@ header .navigation{
 }
 header .navigation .navigation-items a{
     position: relative;
-    color: #230f74;
+    color: white;
     font-size: 1em;
     font-family: centuryGothicb;
     font-weight: 500;
@@ -64,10 +64,13 @@ header .navigation .navigation-items a{
     margin-left: 30px;
     transition: 0.3s ease;
 }
+header .navigation .navigation-items a:hover{
+    color: rgba(6, 12, 75, 0.84);
+}
 header .navigation .navigation-items a:before{
     content: '';
     position: absolute;
-    background: #192f77;
+    background: rgba(6, 12, 75, 0.84);
     width: 0%;
     height: 2px;
     bottom: 0;
@@ -94,11 +97,11 @@ section{
     display: flex;
     justify-content: center;
     flex-direction: column;
-    background: rgba(232, 142, 142, 0.858);
+    background: rgba(0, 5, 59, 0.84);
 }
 .home:before{
     /* //homeScreen Video  */
-    z-index: 7;
+    z-index: 777;
     content: '';
     position: absolute;
     background: rgba(3, 96, 251, 0.3);
@@ -109,10 +112,14 @@ section{
 
 }
 .home .content{
-    z-index: 88;
+    z-index: 888;
     color: #fff;
     width: 70%;
     margin-top: 50px;
+    display: none;
+}
+.home .content.active{
+    display: block;
 }
 .home .content h1{
     font-family: "EB Garamond", serif;
@@ -137,14 +144,18 @@ section{
     background: #fff;
     font-family: "Poppins", sans-serif;
     padding: 15px 35px;
-    color: red;
+    color: rgb(23, 29, 97);
     font-size: 1.1em;
     font-weight: 500;
     text-decoration: none;
     border-radius: 2px;
 }
+.home .content a:hover{
+    background: rgb(23, 29, 97);
+    color: #fff;
+}
 .home .media-icons{
-    z-index: 88;
+    z-index: 888;
     position: absolute;
     right: 30px;
     display: flex;
@@ -160,6 +171,8 @@ section{
 }
 .home .media-icons a:hover{
     transform: scale(1.3);
+    color: rgb(23, 29, 97);
+
 }
 
 .home video{
@@ -174,7 +187,7 @@ section{
 }
 
 .slider-navigation{
-    z-index: 8;
+    z-index: 888;
     position: relative;
     display: flex;
     justify-content: center;
@@ -192,7 +205,7 @@ section{
     transition: 0.3s ease;   
 }
 .slider-navigation .nav-btn.active{
-    background: #2696E9;
+    background: rgb(23, 29, 97);
 }
 .slider-navigation .nav-btn:not(:last-child){
     margin-right: 20px;
@@ -207,6 +220,8 @@ section{
 }
 .video-slide.active{
     clip-path: circle(150% at 0 50%);
+    transition: 2s ease;
+    transition-property: clip-path;
 }
 
 @media (max-width: 1040px){
@@ -267,7 +282,7 @@ section{
         transition: 0.3s ease;
     }
     .menu-btn.active{
-        z-index: 99;
+        z-index: 999;
         background: url(WEBSITE_CONTENT/close-btn.png)no-repeat;
         background-size: 25px;
         background-position: center;
