--- a/style.css
+++ b/style.css
@@ -489,6 +489,9 @@ footer {
 footer .footer-col {
   padding-bottom: 40px;
 }
+.footer-col .about-footer-col{
+  width: 25%;
+}
 footer h3 {
   color: white;
   font-weight: 600;
