--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 
 @font-face {
   font-family: centuryGothic;
@@ -361,7 +361,21 @@ section {
 
 #about-home {
   background-image: linear-gradient(rgba(9, 5, 54, 0.3), rgba(5, 4, 46, 0.7)),
-    url(WEBSITE_CONTENT/FRONT_PAGE/01Crop.jpg);
+    url(WEBSITE_CONTENT/FRONT_PAGE/02.jpg);
+  width: 100%;
+  height: 60vh;
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  padding-top: 40px;
+}
+#about-services {
+  background-image: linear-gradient(rgba(9, 5, 54, 0.3), rgba(5, 4, 46, 0.7)),
+    url(WEBSITE_CONTENT/FRONT_PAGE/04.jpg);
   width: 100%;
   height: 60vh;
   background-size: cover;
@@ -379,7 +393,19 @@ section {
   font-size: 2.2rem;
   letter-spacing: 1px;
 }
+#about-services .name_h2 {
+  color: #fff;
+  font-family: copperplateGothic;
+  font-size: 2.2rem;
+  letter-spacing: 1px;
+}
 #about-home .a_h2 {
+  color: #fff;
+  font-size: 2.2rem;
+  font-family: "EB Garamond", serif;
+  letter-spacing: 1px;
+}
+#about-services .a_h2 {
   color: #fff;
   font-size: 2.2rem;
   font-family: "EB Garamond", serif;
@@ -439,7 +465,7 @@ section {
   margin-bottom: 50px;
 }
 
-.our-team{
+.our-team {
   margin-top: 50px;
 }
 
@@ -448,7 +474,7 @@ section {
   margin-bottom: 20px;
   font-family: centuryGothicb;
   color: #101c32;
-  letter-spacing: 1px;  
+  letter-spacing: 1px;
   text-align: center;
 }
 
@@ -461,17 +487,18 @@ section {
 }
 
 .our-team ul,
-.our-services ul{
+.our-services ul {
   padding-left: 50px;
 }
-.our-team li, .our-services li {
+.our-team li,
+.our-services li {
   cursor: pointer;
   line-height: 30px;
   font-family: "Roboto", sans-serif;
   letter-spacing: 0.3px;
 }
 .our-team li:hover,
-.our-services li:hover{
+.our-services li:hover {
   font-weight: 700;
   color: #101c32;
   transition: 0.3s ease;
@@ -489,7 +516,7 @@ footer {
 footer .footer-col {
   padding-bottom: 40px;
 }
-.footer-col .about-footer-col{
+.footer-col .about-footer-col {
   width: 25%;
 }
 footer h3 {
@@ -547,6 +574,148 @@ footer .developer a {
   text-decoration: solid;
   font-family: "Poppins", sans-serif;
 }
+
+/* // contact us page  */
+#contact{
+  padding: 8vw;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+#contact .getin{
+  width: 350px;
+}
+#contact .getin h2{
+  color: #2c234d;
+  font-size: 30px;
+  font-weight: 800;
+  font-family: "Poppins", sans-serif;
+  line-height: .8;
+  margin-bottom: 16px;
+}
+#contact .getin p{
+  color: #686875;
+  font-family: "Poppins", sans-serif;
+  line-height: 24px;
+  margin-bottom: 33px;
+  padding-bottom: 25px;
+  border-bottom: 1px solid #e5e4ed;
+}
+#contact .getin h3{
+  color: #2c234d;
+  font-size: 16px;
+  font-weight: 600;
+  font-family: "Poppins", sans-serif;
+  line-height: 26px;
+  margin-bottom: 15px;
+}
+#contact .getin .getin-details div{
+  display: flex;
+}
+#contact .getin .getin-details div .get{
+  font-size: 16px;
+  line-height: 22px;
+  color: #2c234d;
+  margin-right: 20px;
+}
+#contact .getin .getin-details div p{
+  font-size: 14px;
+  border-bottom: none;
+  line-height: 22px;
+  margin-bottom: 15px;
+}
+#contact .getin .getin-details .pro-links i{
+  color: #2c234d;
+  font-size: 1.6em;
+  margin-right: 15px;
+  transition: 0.3s ease;
+}
+#contact .getin .getin-details .pro-links i:hover{
+  color: #5838fc;
+  font-size: 1.8em;
+  margin-right: 15px;
+}
+
+#contact .form{
+  width: 60%;
+  background: #f7f6fa;
+  padding: 40px;
+  border-radius: 10px;
+}
+#contact .form h4{
+  font-size: 24px;
+  color: #2c234d;
+  font-family: "Poppins", sans-serif;
+  line-height: 30px;
+  margin-bottom: 8px;
+}
+
+/* #contact .form p{
+  color: #686875;
+  font-family: "Poppins", sans-serif;
+  line-height: 24px;
+  margin-bottom: 33px;
+  padding-bottom: 25px;
+  border-bottom: 1px solid #e5e4ed;
+} */
+
+#contact .form p{
+  color: #686875;
+  line-height: 24px;
+  font-family: copperplateGothic;
+  padding-bottom: 25px;
+}
+
+#contact .form .form-row{
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+#contact .form .form-row input{
+  width: 48%;
+  font-size: 14px;
+  font-weight: 400;
+  border-radius: 3px;
+  border: none;
+  background: #fff;
+  color: #7e7c87;
+  outline: none;
+  padding: 20px 30px;
+  margin-bottom: 20px;
+}
+#contact .form .form-col input,
+#contact .form .form-col textarea{
+  width: 100%;
+  font-size: 14px;
+  font-weight: 400;
+  border-radius: 3px;
+  border: none;
+  background: #fff;
+  color: #7e7c87;
+  outline: none;
+  padding: 20px 30px;
+  margin-bottom: 20px;
+}
+#contact .form button{
+  font-size: .9rem;
+  padding: 13px 25px;
+  background: rgb(21,21,100);
+  border-radius: 5px;
+  outline: none;
+  border: none;
+  font-weight: 600;
+  cursor: pointer;
+  color: #fff;
+}
+#map{
+  width: 100%;
+  height: 70vh;
+}
+#map iframe{
+  width: 100%;
+  height: 100%;
+}
+
 @media (max-width: 811px) {
   nav {
     padding: 15px 20px;
@@ -603,7 +772,14 @@ footer .developer a {
   #about-home .name_h2 {
     font-size: 2rem;
   }
+  #about-services .name_h2 {
+    font-size: 2rem;
+  }
+
   #about-home .a_h2 {
+    font-size: 2rem;
+  }
+  #about-services .a_h2 {
     font-size: 2rem;
   }
   #about-container .about-img {
@@ -612,9 +788,23 @@ footer .developer a {
   #about-home {
     height: 50vh;
   }
+  #about-services {
+    height: 50vh;
+  }
+  
+  /* contact  */
+  #contact{
+    padding: 8vw 4vw;
+    /* display: flex;
+    justify-content: space-between;
+    align-items: flex-start; */
+  }
+  #contact .getin{
+    width: 250px;
+  }
 }
-@media (max-width:475px){
-  h1{
+@media (max-width: 475px) {
+  h1 {
     font-size: 2rem;
   }
   /* About page for mobile  */
@@ -622,32 +812,65 @@ footer .developer a {
   #about-home .name_h2 {
     font-size: 1.4rem;
   }
+  #about-services .name_h2 {
+    font-size: 1.4rem;
+  }
   #about-home .a_h2 {
     padding-top: 5px;
     font-size: 1.4rem;
-  } 
-  #about-container{
+  }
+  #about-services .a_h2 {
+    padding-top: 5px;
+    font-size: 1.4rem;
+  }
+  #about-container {
     flex-direction: column-reverse;
   }
-  #about-container .about-img{
+  #about-container .about-img {
     width: 100%;
     padding: 0;
   }
- 
+
   #about-container .about-img img {
     width: 100%;
     padding-top: 20px;
   }
-  
-  #about-container .about-text{
+
+  #about-container .about-text {
     width: 100%;
   }
   section {
     padding: 20px 20px;
   }
   .our-team li,
-.our-services li{
-  font-weight: 500;
-  color: #101c32;
-}
+  .our-services li {
+    font-weight: 500;
+    color: #101c32;
+  }
+
+  /* contact  */
+  #contact{
+    padding: 8vw 4vw;
+    flex-direction: column;
+    align-content: flex-start;
+    justify-content: flex-start;
+  }
+  #contact .getin{
+    width: 100%;
+    margin-bottom: 30px;
+  }
+  #contact .form{
+    width: 100%;
+    padding: 40px 30px;
+  }
+  #contact .form .form-row{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    width: 100%;
+  }
+  #contact .form .form-row input{
+    width: 100%;
+  }
+
 }
