--- a/style.css
+++ b/style.css
@@ -191,7 +191,8 @@ section {
   text-transform: uppercase;
   letter-spacing: 5px;
   line-height: 75px;
-  margin-bottom: 40px;
+  margin-bottom: 145px;
+  margin-top: 75px;
   color: white;
 }
 .home .content h1 span {
@@ -827,6 +828,11 @@ footer .developer a {
     font-size: 2rem;
   }
   /* About page for mobile  */
+  .home .content h1 {
+    font-size: 2em;
+    line-height: 50px;
+    margin-bottom: 100px;
+  }
 
   #about-home .name_h2 {
     font-size: 1.4rem;
