--- a/style.css
+++ b/style.css
@@ -606,6 +606,80 @@ section {
   border-color: #c7c7ff;
 }
 
+/* Porject screen  */
+
+#project{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  /* margin: 50px 0px; */
+}
+.project-heading{
+  /* margin-top: 20px; */
+  display: flex;
+  flex-direction: column;
+}
+.project-heading h3{
+  font-size: 2.5rem;
+  font-family: 'Poppins', sans-serif;
+  color: #2c234d;
+  font-weight: 700;
+}
+.project-heading span{
+  color: #686875;
+  font-family: 'Poppins', sans-serif;
+  margin-bottom: 30px; 
+}
+#project ul{
+  list-style: none;
+  font-family: 'Poppins',sans-serif;
+}
+.project-filter{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid rgba(237,237,237,0.6);
+  border-radius: 5px;
+  flex-wrap: wrap;
+  margin: 20px;
+}
+.project-filter li{
+  margin: 10px;
+  padding: 5px 20px;
+  color: #2c234d;
+  font-size: 1rem;
+  letter-spacing: 0.5px;
+  font-weight: 400;
+  cursor: pointer;
+  user-select: none;
+}
+.project-filter-active{
+  background-color: #f0f0f0;
+  color: #272727;
+  border-radius: 5px;
+}
+.project-container{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  max-width:1200px;
+  margin: auto;
+} 
+.project-box{
+  width: 330px;
+  padding: 2px;
+  /* border: 1px solid #eeeeee; */
+  margin: 20px;
+  /* border-radius: 2px; */
+}
+.project-box img{
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  border-radius: 2px;
+}
 
 /* Footer  */
 footer {
@@ -752,16 +826,6 @@ footer .developer a {
   line-height: 30px;
   margin-bottom: 8px;
 }
-
-/* #contact .form p{
-  color: #686875;
-  font-family: "Poppins", sans-serif;
-  line-height: 24px;
-  margin-bottom: 33px;
-  padding-bottom: 25px;
-  border-bottom: 1px solid #e5e4ed;
-} */
-
 #contact .form p {
   color: #686875;
   line-height: 24px;
@@ -913,6 +977,21 @@ footer .developer a {
     grid-template-columns: repeat(2,1fr);
     /* margin-top: 30px; */
   }
+
+  /* Project screen  */
+
+  .project-filter{
+    background-color: #f9f9f9;
+    border: 1px solid rgba(0, 0, 0, .05);
+  }
+  .project-filter-active{
+    background-color: #fff;
+    border: 1ps solid rgb(219, 219, 219);
+    
+  }
+  .project-box{
+    width: 100%;
+  }
 }
 @media (max-width: 475px) {
   h1 {
@@ -1001,6 +1080,11 @@ footer .developer a {
   .card{
     height: 110px;
     width: 350px;
+  }
+
+  /* // Project screen  */
+  .project-heading h3{
+    font-size: 1.8rem;
   }
   
 }
